responsive and styles fixing

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-slick": "^0.29.0",
+    "react-typing-sequence": "^1.1.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1"
   },
