--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.10",
